--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -7,6 +7,7 @@
   align-items: start;
   padding-left: 1.5rem;
   padding-top: 2rem;
+  z-index: 5;
 }
 
 .side-block {
